<resources>
    <string name="app_name">Wallnit</string>
    <string name="start_login_btn">Log In</string>
    <string name="forget_password_text">forgot password</string>
    <string name="go_signupuser_text">Sign up User</string>
    <string name="go_signupcircle_text">Sign up Circle</string>
    <string name="signup_username">Username</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_button_txt">Sign Up</string>
    <string name="signup_circlename">Circlename</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="continuetxt">Continue</string>
    <string name="forget_password_step_first">Enter email address</string>
    <string name="forget_password_step_second">######</string>
    <string name="forget_password_new">Enter new password</string>
    <string name="forget_password_old">Enter old password</string>
    <string name="change_password_forget">Change password</string>
    <string name="posted">Posted : 24/08/2016</string>
    <string name="last_update_terms">Last Updated :</string>
    <string name="agreement">Agreement :</string>
    <string name="agreement_first">1. Grant of use of services</string>
    <string name="nexttxt">Next</string>
    <string name="account_confirm">Account Confirmation</string>
    <string name="account_confirmation_desc">Send a verification code via text</string>
    <string name="india_code">+91</string>
    <string name="account_verifi">Account Verification</string>
    <string name="account_verifi_desc">We send your code to:</string>
    <string name="interest_title">Choose your interest</string>
    <string name="interest_desc">Choose categories of your interest from below, so that you can receive posts accordingly.</string>
    <string name="create_circle_title">Create Circle</string>
    <string name="entertainment_title"><u>Entertainment</u></string>
    <string name="health_and_fitness_title"><u>Health and Fitness</u></string>
    <string name="informational_title"><u>Informational</u></string>
    <string name="business_title"><u>Business</u></string>
    <string name="lifestyle_title"><u>Lifestyle</u></string>
    <string name="other_title"><u>Other</u></string>
    <string name="circlename_createcircle"><font size="14">Circlename</font></string>
    <string name="content_to_post">Content to post</string>
    <string-array name="content_post">
        <item><font size="13">quote</font></item>
        <item><font size="13">photo</font></item>
        <item><font size="13">blog</font></item>
    </string-array>
    <string name="category_to_post">Category</string>
    <string-array name="entertainment_category">
        <item><font size="13">Movies</font></item>
        <item><font size="13">Actors</font></item>
        <item><font size="13">Artists</font></item>
        <item><font size="13">Music</font></item>
        <item><font size="13">Literature</font></item>
        <item><font size="13">Dance</font></item>
        <item><font size="13">TV Episodes</font></item>
        <item><font size="13">Humor</font></item>
        <item><font size="13">Art</font></item>
        <item><font size="13">Comics</font></item>
    </string-array>
    <string name="publishbtn"><font size="13">Publish</font></string>
    <string-array name="healthandfitness_category">
        <item><font size="13">Yoga</font></item>
        <item><font size="13">Exercise</font></item>
        <item><font size="13">Sports</font></item>
    </string-array>
    <string-array name="informational_category">
        <item><font size="13">History</font></item>
        <item><font size="13">Magazines</font></item>
        <item><font size="13">News</font></item>
        <item><font size="13">Education</font></item>
        <item><font size="13">Science</font></item>
        <item><font size="13">Technology</font></item>
    </string-array>
    <string-array name="business_category">
        <item><font size="13">Startup</font></item>
        <item><font size="13">Entrepreneur</font></item>
    </string-array>
    <string-array name="lifestyle_category">
        <item><font size="13">Fashion</font></item>
        <item><font size="13">Travel</font></item>
        <item><font size="13">Culture</font></item>
        <item><font size="13">Photography</font></item>
    </string-array>
    <string name="other_circlecategory">Enter Category</string>
    <string name="upload_post"><b>Post</b></string>
    <string name="anonymous_text">Anonymous</string>
    <string name="upload_posttext">write your post....</string>
    <string name="upload_poststatus">write your status....</string>
    <string name="linkhintpost">Add or paste link here</string>
    <string name="bloghintpost">Title</string>
    <string name="upload_postblog">write your blog....</string>
    <string name="upload_postquote">write quote here....</string>
    <string name="title_activity_wallnit_user_background_option">Color Theme
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wallnit_user_background_image_theme">
        Image Theme
    </string>
    <string name="title_activity_wallnit_user_background_gallery_theme">
        Gallery Theme
    </string>
    <string name="title_activity_wallnit_circle_background_gallery_theme">
        Gallery Theme
    </string>
    <string name="title_activity_wallnit_circle_background_option">Color Theme
    </string>
    <string name="title_activity_wallnit_circle_background_image_theme">
        Image Theme
    </string>
    <string name="account_setting_labelfirst">Username</string>
    <string name="account_setting_labelsecond">Email</string>
    <string name="account_setting_labelthird">#tagname</string>
    <string name="account_setting_labelfourth">Gender</string>
    <string name="gender_first">Male</string>
    <string name="gender_second">Female</string>
    <string name="gender_third">Other</string>
    <string name="account_setting_dob">D.O.B.</string>
    <string-array name="dob_month">
        <item>January</item>
        <item>Feburary</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>Octuber</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="dob_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="dob_year">
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
    </string-array>
    <string name="account_setting_place">Place</string>
    <string name="account_setting_work">Work</string>
    <string name="account_setting_website">Website</string>
    <string name="account_setting_contact">Contact</string>
    <string name="account_setting_language">Language</string>
    <string name="account_setting_saveoption">save</string>
    <string name="circle_setting_labelfirst">Circlename</string>
    <string name="circle_setting_labelsecond">Email</string>
    <string name="circle_setting_labelthird">Created on</string>
    <string name="circle_setting_labelfourth">Creator</string>
    <string name="circle_setting_labelfifth">Category</string>
    <string name="circle_setting_labelsixth">Content to post</string>
    <string name="circle_setting_labelseventh">Website</string>
    <string name="circle_setting_labeleighth">Contact</string>
    <string name="account_setting_publishoption">Publish</string>
    <string name="circlewritedesc">Description</string>
    <string name="profile_image_change">Change</string>
    <string name="profilephoto_title"><font size="13">Profile Photo</font></string>
    <string name="account_setting_info">Account Information</string>
    <string name="account_setting_generalinfo">General Information</string>
    <string name="account_setting_placeinfo">Place</string>
    <string name="account_setting_worktxt">Write something about your work</string>
    <string name="account_setting_placeinfo_and_workinfo">Work and place</string>
    <string name="account_setting_aboutyou">Write something about yourself</string>
    <string name="account_setting_changepassword">Change password</string>
    <string name="useraccount_information">Account Information</string>
    <string name="useraccount_setting_accountinfotxt_first">Name</string>
    <string name="useraccount_generalinformation">General Information</string>
    <string name="useraccount_work_ndplace">Work and Place</string>
    <string name="useraccount_contact">Contact</string>
</resources>