<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColorDefault"
    tools:context="com.wallnit.wallnitlogin.WallnitStart">


    <TextView
        android:id="@+id/firstgo_signup_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_signupuser_text"
        style="@style/signup_asuser_textbottom"
        />

    <TextView
        android:id="@+id/firstgo_signup_circle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_signupcircle_text"
        style="@style/signup_ascircle_textbottom"
        />

    <TextView
        android:id="@+id/forget_password_startActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/firstgo_signup_circle_text"
        android:layout_marginBottom="10sp"
        android:text="@string/forget_password_text"
        style="@style/forget_password_style"
        />

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_login_btn"
        style="@style/start_activity_button"
        android:layout_above="@id/forget_password_startActivity"
        />


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/wallnitstartgif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/wallnit_start_image"
        android:layout_above="@id/start_login_button"
        />






</RelativeLayout>
