<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/startBottomTextColor"
    android:orientation="vertical"
    tools:context="com.wallnit.wallnitlogin.WallnitUserGeneralInformation">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_labelfourth"
        style="@style/account_settingtxtlabel"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_first"
            />
        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_second"
            />
        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_third"
            />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_dob"
        style="@style/account_settingtxtlabel"
        android:layout_marginTop="10sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        >

        <Spinner
            android:id="@+id/generalinfo_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            ></Spinner>

        <Spinner
            android:id="@+id/generalinfo_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            ></Spinner>

        <Spinner
            android:id="@+id/generalinfo_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            ></Spinner>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_language"
        style="@style/account_settingtxtlabel"
        android:layout_marginTop="10sp"
        />

    <EditText
        android:id="@+id/language_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/account_setting_language"
        android:textColor="@color/editTextBoxColor"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setting_website"
        style="@style/account_settingtxtlabel"
        android:layout_marginTop="10sp"
        />

    <EditText
        android:id="@+id/website_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/account_setting_website"
        android:textColor="@color/editTextBoxColor"
        />

    <EditText
        android:id="@+id/set_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/set_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/set_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/set_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
</LinearLayout>
