<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColorDefault"
    tools:context="com.wallnit.wallnitlogin.WallnitSignupCircle">

    <TextView
        android:id="@+id/signupcircle_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_signupcircle_text"
        style="@style/signup_title_styles"
        />

    <ImageView
        android:id="@+id/wallnitcircle_icon"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginTop="60sp"
        android:layout_below="@id/signupcircle_title"
        android:src="@drawable/wallnit_icon"
        />

    <EditText
        android:id="@+id/signupcircle_enter_circlename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wallnitcircle_icon"
        style="@style/signup_circleedit_text"
        android:ems="12"
        android:singleLine="true"
        android:layout_marginTop="25sp"
        />

    <EditText
        android:id="@+id/signupcircle_enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupcircle_enter_circlename"
        style="@style/signup_emailedit_text"
        android:ems="12"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/signupcircle_enter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupcircle_enter_email"
        style="@style/signup_passedit_text"
        android:inputType="textPassword"
        android:ems="12"
        android:singleLine="true"
        />

    <Button
        android:id="@+id/signup_circle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupcircle_enter_pass"
        style="@style/signup_button"
        android:text="@string/signup_button_txt"
        />

    <TextView
        android:id="@+id/terms_of_service_txtcircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_circle_button"
        android:text="@string/terms_of_service"
        style="@style/terms_of_servicetxt"
        />

    <TextView
        android:id="@+id/firstgo_signup_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_signupuser_text"
        style="@style/signup_asuser_textbottom"
        />

    <TextView
        android:id="@+id/login_gotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_login_btn"
        style="@style/signup_ascircle_textbottom"
        />
</RelativeLayout>
