<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColorDefault"
    tools:context="com.wallnit.wallnitlogin.ForgetPassword_StepThird">


    <ImageView
        android:id="@+id/wallnit_forget_icon"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginTop="80sp"
        android:src="@drawable/wallnit_icon"
        />


    <TextView
        android:id="@+id/forget_passwordthird_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wallnit_forget_icon"
        style="@style/forget_password_title"
        />

    <TextView
        android:id="@+id/forget_password_third_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_passwordthird_title"
        style="@style/forget_password_description"
        />


    <EditText
        android:id="@+id/forget_password_enternew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_third_desc"
        style="@style/forgetpassword_edittext"
        android:hint="@string/forget_password_new"
        />

    <Button
        android:id="@+id/change_passwordbtn_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_enternew"
        style="@style/signup_button"
        android:text="@string/change_password_forget"
        />

    <TextView
        android:id="@+id/forget_login_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_login_btn"
        style="@style/signup_asuser_textbottom"
        />

    <TextView
        android:id="@+id/forget_terms_ofservice_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_service"
        style="@style/signup_ascircle_textbottom"
        />



</RelativeLayout>
